tests/NormalTests/paczka2/big_fuzzy/14242959.err
Error in line 3: 4rE4edrfWpT S886 93,5
Error in line 32: S236 S236 76,7
Error in line 33: 4rE4edrfWpT A237 33,2
Error in line 37: S236 A237 19,0
Error in line 49: y83f6mHxI A237 5,8
Error in line 74: 6KF A237 12,07
Error in line 82: 6KF A237 57,54
Error in line 77: S236 S886 86,9
Error in line 90: 6KF S236 71,8
Error in line 85: 4rE4edrfWpT S886 8,9
Error in line 93: 4rE4edrfWpT S236 74,9
Error in line 101: S236 A237 79,1
Error in line 99: 4rE4edrfWpT S638 27,0
Error in line 100: 6KF S638 76,9
Error in line 106: 2ki S236 50,0
Error in line 114: 6KF A237 55,9
Error in line 115: 2ki S886 64,4
Error in line 122: y83f6mHxI A237 98,8
Error in line 120: 2ki S236 11,5
Error in line 119: 6KF S886 29,9
Error in line 131: Y3j S638 83,1
Error in line 139: 2ki S638 60,83
Error in line 135: 5PD S886 10,5
Error in line 149: 6KF S886 0,6
Error in line 137: 2ki S638 28,7
Error in line 124: y83f6mHxI S886 18,6
Error in line 163: y83f6mHxI A237 83,4
Error in line 160: 4rE4edrfWpT S886 114,9
Error in line 178: y83f6mHxI S638 50,6
Error in line 187: Y3j S886 226,4
Error in line 189: S236 A237 94,1
Error in line 190: Y3j S638 56,3
Error in line 202: S236 S236 16,1
Error in line 231: 6KF A237 38,2
Error in line 235: 5PD S886 28,5
